add forest_fire exercise

--- a/Mesa.ipynb
+++ b/Mesa.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boltzman wealth model"
+    "# Boltzmann wealth model"
    ]
   },
   {
@@ -435,6 +435,26 @@
     "Przydatne rzeczy: <br/>\n",
     "Funkcja agent_portrayal zwraca słownik z atrybutami Shape, Filled, Layer, Color, r<br/>\n",
     "Możesz zmodyfikować słownik na podstawie atrybutu agent.wealth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forest fire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ćwiczenie 2.1\n",
+    "\n",
+    "Otwórz przykład forest_fire. <br/>\n",
+    "Przykład demonstruje model pożaru lasu znany z automatów komórkowych. Domyślnie wszystkie drzewa skrajnie po lewej są inicjalizowane jako palące się. Zmodyfikuj przykład tak, aby drzewa podpalały się podczas inicjalizacji losowo z prawdopodobieństwem ustawianym przy pomocy suwaka podobnie jak Tree density.\n",
+    "\n",
+    "Wskazówka:<br/>\n",
+    "Pliki do zmiany to server.py i model.py"
    ]
   },
   {
