--- a/Mesa.ipynb
+++ b/Mesa.ipynb
@@ -34,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MoneyAgent(Agent):\n",
@@ -67,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "empty_model = MoneyModel(10)\n",
@@ -91,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MoneyAgent(Agent):\n",
@@ -136,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = MoneyModel(10)\n",
@@ -151,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_wealth = []\n",
@@ -248,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = MoneyModel(50, 10, 10)\n",
@@ -261,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -378,9 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gini = model.datacollector.get_model_vars_dataframe()\n",
@@ -390,9 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "agent_wealth = model.datacollector.get_agent_vars_dataframe()\n",
@@ -414,9 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(agent_ids, max_wealths)"
@@ -461,6 +441,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# WolfSheep Predation model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ćwiczenie 2.1\n",
+    "W pliku wolf_sheep/wolf_sheep/agents.py:\n",
+    "Uzupełnij funkcję step o sytuację kiedy agent Sheep się rozmnaża. Owca poświęca w ten sposób połowę swojej energii dla nowej owcy.\n",
+    "Wskazówki:\n",
+    "- owca rodzic traci połowę swojej energii na rzecz owcy dziecka  \n",
+    "- funkcja self.random.random() - losuje liczbę z przedziału (0, 1)\n",
+    "- self.model.sheep_reproduce - prawdopodobieństwo, że owca się rozmnaża\n",
+    "- nową owcę tworzy się konstruktorem Sheep(id, position, model, moore, energy)\n",
+    "    - id - id nowego agenta Sheep,\n",
+    "    - position - tupla (x, y) z pozycją dla nowego agenta\n",
+    "    - model - przekazujemy ten sam co rodzica\n",
+    "    - moore - jak wyżej,\n",
+    "    - energy - energia początkowa agenta\n",
+    "- funkcja self.model.next_id() - zwraca nowe id dla agenta\n",
+    "- funkcja self.model.grid.place_agent(agent, position) - dodaje agenta do grida na daną pozycję \n",
+    "- funkcja self.model.schedule.add(agent) - dodaje agenta do schedula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ćwiczenie 2.2\n",
+    "W pliku wolf_sheep/wolf_sheep/agents.py\n",
+    "Uzupełnij funkcję step agenta Wolf zjedzenie owcy.\n",
+    "Wskazówki:\n",
+    "- funkcja self.model.grid._remove_agent(position, agent) usuwa agenta z grida\n",
+    "- funkcja self.model.schedule.remove(agent) usuwa agenta z listy agentów\n",
+    "- self.model.wolf_gain_from_food - ilosc energii zdobytej ze zjedzenia owcy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ćwiczenie 2.3\n",
+    "W pliku wolf_sheep/wolf_sheep/model.py\n",
+    "Uzupełnij model WolfSheep o tworzenie owiec.\n",
+    "Wskazówki:\n",
+    "- tworzymy self.initial_sheep owiec\n",
+    "- agenta owcy tworzy się konstruktorem Sheep(id, position, model, moore, energy)\n",
+    "    - id - id agenta\n",
+    "    - position - tupla (x, y) z współrzędnymi agenta\n",
+    "    - model - model\n",
+    "    - moore - flaga czy sąsiedztwo ma być Moore'a, czy Von Neumanna, u nas to True\n",
+    "    - energy - energia startowa owcy\n",
+    "\n",
+    "- funkcja self.random.randrange(m) zwraca wartosc z przedzialu <0, m)\n",
+    "- owce mają mieć losowe współrzędne startowe\n",
+    "- poziom energii ma mieć wartość losową z przedziału <0, 2*self.sheep_gain_from_food)\n",
+    "- self.grid.place_agent(agent, position) - dodaje agenta do gridu\n",
+    "- self.schedule.add(agent) - dodaje agenta do schedula\n",
+    "\n",
+    "Następnie dodaj wilki w analogiczny sposób.\n",
+    "Wskazówki:\n",
+    "- tworzymy self.initial_wolves owiec\n",
+    "- poziom energii ma mieć wartość losową z przedziału <0, 2*self.wolf_gain_from_food)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Teraz możemy zobaczyć nasz system wpisując komendę:\n",
+    "python run.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Zadanie domowe\n",
     "Tworzymy sieć jak na obrazku:\n",
     "![title](network.png)\n",
@@ -496,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
