--- a/Mesa.ipynb
+++ b/Mesa.ipynb
@@ -508,13 +508,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Teraz możemy zobaczyć nasz system wpisując komendę:\n",
-    "python run.py"
+    "Teraz możemy zobaczyć nasz system uruchamiając plik run.py w katalogu wolf_sheep."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VirusOnNetwork\n",
+    "Model ten pokazuje jak rozprzestrzenia się wirus w sieci. Każdy węzeł w sieci ma odpowiadać komputerowie w sieci i może być w jednym z trzech stanów: podatny (susceptible), zarażony (infected), lub odporny (resistant). W każdym kroku każdy zarażony węzeł próbuje zarazić wszystkich swoich sąsiadów (virus_spread_chance). Odpowiada to otwarciu zainfekowanego załącznika w emailu. Odporne węzły nie mogą zostać zarażone - one mają zaktualizowanego antywirusa i są odporne na ten wirus. Zainfekowane węzły nie wiedzą od razu że są zainfekowane. Co jakiś czas (virus_check_frequency) - tak jak okresowy skan antywirusa - sprawdzają czy są zainfekowane. Jeśli wirus zostanie wykryty, istnieje szansa (recovery_chance), że zostanie usunięty. Jeśli zostanie usunięty, to istnieje szansa (gain_resistance_chance) że węzeł się uodporni."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ćwiczenie 3.1\n",
+    "W pliku virus_on_network/virus_on_network/model.py uzupełnij brakujące definicje funkcji agenta VirusAgent: try_to_infect_neighbors, try_gain_resistance, try_remove_infection, try_check_situation, step.\n",
+    "Wskazówki:\n",
+    "- aby otrzymać listę sąsiadów węzła należy skorzystać z dwóch funkcji:\n",
+    "    - self.model.grid.get_neighbors(self.pos, include_center=False) - zwraca listę węzłów sąsiadujących do pozycji\n",
+    "    - self.model.grid.get_cell_list_contents(neighbors_nodes) - zwraca listę agentów w tych węzłach\n",
+    "- stan agentów opisuje enum State"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz możemy zobaczyć nasz system uruchamiając plik run.py w katalogu virus_on_network."
    ]
   },
   {
